# brother

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust-publish.yml
brother/: Cargo.toml
brother-cli/: Cargo.toml
brother-cli/src/: auth_vault.rs  client.rs  commands.rs  config.rs  daemon.rs  domain_filter.rs  main.rs  output.rs  policy.rs  protocol.rs  request.rs  stream_server.rs
brother-cli/src/daemon/: auth_vault.rs  debug.rs  diff.rs  dispatch.rs  domain_filter.rs  handlers.rs  macros.rs  mod.rs  navigate.rs  network.rs  observe.rs  persist.rs  policy.rs  server.rs  state.rs
brother-cli/src/daemon/handlers/: auth.rs  diff.rs  emulation.rs  interaction.rs  navigation.rs  network.rs  observation.rs  state.rs  tabs.rs  trace.rs
brother-cli/src/protocol/: mod.rs  paths.rs  request.rs  response.rs  types.rs
brother-pw/: Cargo.toml
brother-pw/src/: lib.rs
brother/src/: browser.rs  client.rs  config.rs  daemon.rs  diff.rs  dom.rs  emulate.rs  error.rs  interact.rs  lib.rs  navigate.rs  observe.rs  page.rs  protocol.rs  resolve.rs  snapshot.rs  storage.rs
brother/src/page/: clipboard.rs  cookie_storage.rs  dialog.rs  dom.rs  emulation.rs  find.rs  input.rs  interaction.rs  javascript.rs  log.rs  mod.rs  navigation.rs  query.rs  screenshot.rs  script.rs  snapshot_cmd.rs  wait.rs
