[package]
name = "brother-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "brother"
path = "src/main.rs"

[dependencies]
brother = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
chromiumoxide = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
